--- a/app/src/main/res/layout/activity_tienda.xml
+++ b/app/src/main/res/layout/activity_tienda.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Tienda">
 
+
     <TextView
         android:id="@+id/contadorTienda"
         android:layout_width="149dp"
@@ -58,7 +59,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/pilaDeMonedas"
+                android:id="@+id/buttonPilaDeMonedas1"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -185,5 +186,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="290dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.962" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
