--- a/app/src/main/res/layout/activity_pantalla_inicio.xml
+++ b/app/src/main/res/layout/activity_pantalla_inicio.xml
@@ -43,4 +43,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Jugar" />
 
+    <TextView
+        android:id="@+id/easterEgg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No mantengas presionado"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Salir"
+        app:layout_constraintVertical_bias="0.864" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
