--- a/app/src/main/res/layout/fila.xml
+++ b/app/src/main/res/layout/fila.xml
@@ -1,42 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="141dp"
-        android:layout_height="106dp"
-        android:src="@drawable/coins" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:orientation="vertical">
-    <TextView
-        android:id="@+id/textoCompra4"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:background="@color/purple_500"
-        android:text="Pila de monedas"
-        android:textAlignment="center"
-        android:textColor="#0FA951"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:id="@+id/linearLayoutMejora1"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/buttonPilaDeMonedas2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:backgroundTint="@color/material_dynamic_neutral_variant30"
-        android:onClick="mejora4"
-        android:text="100 monedas"
-        android:textSize="15dp" />
+
+        <ImageView
+            android:id="@+id/imageView3rv"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_weight="1"
+            android:src="@drawable/coins" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textoCompra1rv"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="@color/purple_500"
+                android:text="Pila de monedas"
+                android:textAlignment="center"
+                android:textColor="#0FA951"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/buttonPilaDeMonedas1rv"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/material_dynamic_neutral_variant30"
+                android:onClick="mejora1"
+                android:text="100 monedas"
+                android:textSize="15dp" />
+        </LinearLayout>
+
+
     </LinearLayout>
+
+
+
 
 
 </LinearLayout>
